# cl_sway_libs

./: .gitignore  Cargo.toml  README.md
libs/: Forc.toml
libs/src/: lib.sw  signed_integers.sw
libs/src/signed_integers/: i128.sw  i64.sw
src/: lib.rs
src/signed_integers/: i64.rs  mod.rs
tests/: harness.rs
tests/signed_integers/: i64.rs  mod.rs
